sandbox/output
OneHundredDoorsTest.java:13: error: cannot find symbol
        assertEquals(new Door[]{Door.OPEN}, oneHundredDoors.doorStatesAfterPassingDoors(1));
                                                           ^
  symbol:   method doorStatesAfterPassingDoors(int)
  location: variable oneHundredDoors of type OneHundredDoors
1 error
